Trying to fix issues with overlapping elements, currently moved about section into header, may need to adjust image, or load it in html vs css

--- a/style/index.css
+++ b/style/index.css
@@ -91,6 +91,9 @@ header {
     height: 20vh;
     color: whitesmoke;
     margin-top: 1%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .name {
@@ -99,6 +102,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-bottom: 1%;
 }
 
 h1 {
@@ -111,10 +115,8 @@ h1 {
     border-radius: 10px;
 }
 
-nav {
-    margin-bottom: 4%;
-    display: flex;
-    justify-content: center;
+header nav {
+    margin: 0 0 4%;
 }
 
 nav a {
@@ -134,16 +136,15 @@ nav a:hover {
 }
 
 .about {
-    margin: 6% auto 0;
+    margin:0 auto;
     color: whitesmoke;
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
-    width: 75%;
+    width: 60%;
     height: 20vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: space-around;
     border: 2px solid whitesmoke;
 }
 
